--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -65,7 +65,8 @@
             android:layout_marginTop="28dp"
             android:contentDescription="@null"
             android:elevation="@dimen/button_elevation"
-            android:src="@drawable/icn_add" />
+            android:src="@drawable/icn_add"
+            android:background="@drawable/btn_background"/>
 
     </FrameLayout>
 
