--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,88 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <FrameLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/placeImage"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:scaleType="centerCrop"
-            android:transitionName="tImage" />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/llEditTextHolder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#95000000">
-
-            <EditText
-                android:id="@+id/etTodo"
+            <ImageView
+                android:id="@+id/placeImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:textColor="@android:color/white" />
+                android:layout_height="220dp"
+                android:scaleType="centerCrop"
+                android:transitionName="tImage" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/llEditTextHolder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#95000000">
 
-    </FrameLayout>
+                <EditText
+                    android:id="@+id/etTodo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:textColor="@android:color/white" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/placeNameHolder"
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/primary_dark"
-            android:transitionName="tNameHolder">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+            <LinearLayout
+                android:id="@+id/placeNameHolder"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/primary_dark"
+                android:transitionName="tNameHolder">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
-        <ImageButton
-            android:id="@+id/btn_add"
-            android:layout_width="@dimen/floating_button_size"
-            android:layout_height="@dimen/floating_button_size"
-            android:layout_gravity="end"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="28dp"
-            android:contentDescription="@null"
-            android:elevation="@dimen/button_elevation"
-            android:src="@drawable/icn_add"
-            android:background="@drawable/btn_background"/>
+            </LinearLayout>
 
-    </FrameLayout>
+            <ImageButton
+                android:id="@+id/btn_add"
+                android:layout_width="@dimen/floating_button_size"
+                android:layout_height="@dimen/floating_button_size"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="28dp"
+                android:background="@drawable/btn_background"
+                android:contentDescription="@null"
+                android:elevation="@dimen/button_elevation"
+                android:src="@drawable/icn_add" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="-10dp"
-        android:text="MY ACTIVITIES"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/white" />
+        </FrameLayout>
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:requiresFadingEdge="vertical" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:text="ABOUT"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@android:color/white" />
 
-</LinearLayout>
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:requiresFadingEdge="vertical" />
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="270dp" />
+
+
+    </LinearLayout>
+
+</ScrollView>
